--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,50 @@ h2 {
 
 .sm-border {
     border-radius: 5px;
-    background-color: white;
-    height: 3px;
     width: 800px;
+    height: 3px;
     margin-top: 15px;
+    background: linear-gradient(-45deg,  #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3);
+    background-size: 400%;
+    -webkit-animation: gradbar 5s ease infinite;
+    -moz-animation: gradbar 5s ease infinite;
+    animation: gradbar 5s ease infinite;      
+}
+
+@-webkit-keyframes gradbar {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@-moz-keyframes gradbar {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
+}
+
+@keyframes gradbar {
+	0% {
+		background-position: 0% 50%
+	}
+	50% {
+		background-position: 100% 50%
+	}
+	100% {
+		background-position: 0% 50%
+	}
 }
 
 .box {
